updating LoanServiceTest